# periogt-demo

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  package.json  periogt-deployment-prd-improved.md  periogt-hpc-backend-feature-spec-reviewed.md
.claude/: settings.local.json
apps/web/: .env.example  README.md  package.json
apps/web/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/components/: batch-results-table.tsx  batch-uploader.tsx  embedding-viewer.tsx  prediction-result.tsx  property-selector.tsx  site-header.tsx  smiles-input.tsx
apps/web/hooks/: use-properties.ts
apps/web/lib/: api.ts  constants.ts  env.ts  modal-proxy.ts  schemas.ts
scripts/: hpc_cli_smoke_test.ps1  hpc_cli_smoke_test.sh  smoke_test.ps1  smoke_test.sh
services/hpc/: README.md  pyproject.toml
services/hpc/apptainer/: README.md  apptainer.def  build.sh
services/hpc/conda/: README.md  environment.yml  install.sh
services/hpc/periogt_hpc/: __init__.py  __main__.py  cli.py  config.py  errors.py  io_csv.py  log.py  runtime.py  server.py
services/hpc/slurm/: README.md  batch.sbatch  predict.sbatch  server.sbatch  setup_env.sh
services/hpc/tests/: conftest.py  test_config.py  test_errors.py  test_gpu_compat.py  test_io_csv.py  test_setup_index.py
services/modal-api/: local_paths.py  periogt_modal_app.py  requirements.txt  test_local_paths.py
services/modal-api/periogt_runtime/: checkpoint_manager.py  inference.py  model_loader.py  preprocessing.py  runtime_config.py  schemas.py
services/modal-api/tests/: conftest.py  (+1 more)
(+10 files in other folders)
