[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "periogt-hpc"
version = "0.2.0"
description = "HPC CLI and optional API server for PerioGT inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1,<9",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9"]

[project.scripts]
periogt_hpc = "periogt_hpc.cli:cli"
periogt_hpc_server = "periogt_hpc.server:main"

[tool.setuptools]
packages = ["periogt_hpc"]

